#35 current journey extend
