# swagger/v1/swagger.json
@@ -623,6 +623,188 @@
                     "updated_at": {
                       "type": "string",
                       "format": "datetime"
+                    },
+                    "trip": {
+                      "type": "object",
+                      "properties": {
+                        "id": {
+                          "type": "integer"
+                        },
+                        "user_id": {
+                          "type": "string"
+                        },
+                        "name": {
+                          "type": "string"
+                        },
+                        "description": {
+                          "type": "string"
+                        },
+                        "distance": {
+                          "type": "string",
+                          "format": "float"
+                        },
+                        "duration": {
+                          "type": "integer"
+                        },
+                        "image_url": {
+                          "type": "string"
+                        },
+                        "favorite": {
+                          "type": "string"
+                        },
+                        "created_at": {
+                          "type": "string",
+                          "format": "datetime"
+                        },
+                        "updated_at": {
+                          "type": "string",
+                          "format": "datetime"
+                        },
+                        "trip_place_infos": {
+                          "type": "array",
+                          "items": {
+                            "type": "object",
+                            "properties": {
+                              "place_id": {
+                                "type": "integer"
+                              },
+                              "trip_id": {
+                                "type": "integer"
+                              },
+                              "comment": {
+                                "type": "string"
+                              },
+                              "order": {
+                                "type": "integer"
+                              },
+                              "place": {
+                                "type": "object",
+                                "properties": {
+                                  "id": {
+                                    "type": "integer"
+                                  },
+                                  "name": {
+                                    "type": "string"
+                                  },
+                                  "description": {
+                                    "type": "string"
+                                  },
+                                  "address_id": {
+                                    "type": "integer"
+                                  },
+                                  "point": {
+                                    "type": "object",
+                                    "properties": {
+                                      "x": {
+                                        "type": "string"
+                                      },
+                                      "y": {
+                                        "type": "string"
+                                      }
+                                    }
+                                  },
+                                  "created_at": {
+                                    "type": "string",
+                                    "format": "datetime"
+                                  },
+                                  "updated_at": {
+                                    "type": "string",
+                                    "format": "datetime"
+                                  },
+                                  "address": {
+                                    "type": "object",
+                                    "properties": {
+                                      "id": {
+                                        "type": "integer"
+                                      },
+                                      "street": {
+                                        "type": "string"
+                                      },
+                                      "buildingNumber": {
+                                        "type": "string"
+                                      },
+                                      "apartment": {
+                                        "type": "string"
+                                      },
+                                      "postalCode": {
+                                        "type": "string"
+                                      },
+                                      "created_at": {
+                                        "type": "string",
+                                        "format": "datetime"
+                                      },
+                                      "updated_at": {
+                                        "type": "string",
+                                        "format": "datetime"
+                                      }
+                                    },
+                                    "category_dictionaries": {
+                                      "type": "array",
+                                      "items": {
+                                        "type": "object",
+                                        "properties": {
+                                          "id": {
+                                            "type": "integer"
+                                          },
+                                          "name": {
+                                            "type": "string"
+                                          },
+                                          "created_at": {
+                                            "type": "string",
+                                            "format": "datetime"
+                                          },
+                                          "updated_at": {
+                                            "type": "string",
+                                            "format": "datetime"
+                                          }
+                                        }
+                                      }
+                                    }
+                                  }
+                                }
+                              }
+                            }
+                          }
+                        }
+                      }
+                    },
+                    "user": {
+                      "type": "object",
+                      "properties": {
+                        "id": {
+                          "type": "integer"
+                        },
+                        "name": {
+                          "type": "string"
+                        },
+                        "surname": {
+                          "type": "string"
+                        },
+                        "birthday": {
+                          "type": "string",
+                          "format": "date"
+                        },
+                        "login": {
+                          "type": "string"
+                        },
+                        "email": {
+                          "type": "string"
+                        },
+                        "created_at": {
+                          "type": "string",
+                          "format": "datetime"
+                        },
+                        "updated_at": {
+                          "type": "string",
+                          "format": "datetime"
+                        },
+                        "role_id": {
+                          "type": "integer"
+                        },
+                        "image_url": {
+                          "type": "string"
+                        }
+                      }
                     }
                   }
                 }
